# zephyr

boards/arm/nrf5340dk_nrf5340/: nrf5340dk_nrf5340_cpuapp.dts
drivers/audio/: CMakeLists.txt  Kconfig  Kconfig.adau1x61  adau1x61.c  adau1x61.h
include/audio/: codec.h
samples/drivers/audio/: CMakeLists.txt  prj.conf
samples/drivers/audio/src/: main.c
